--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.mp4 filter=lfs diff=lfs merge=lfs -text
+*.m4a filter=lfs diff=lfs merge=lfs -text
 edburns/1990-coh-video/20200320-1990-coh-end-of-year-video.mp4 filter=lfs diff=lfs merge=lfs -text
