On branch master Add PDF to LFS track. modified:   .gitattributes modified:   _site/edburns/classic-gaming/tunnels/images/TODManual.pdf modified:   _site/edburns/classic-gaming/tunnels/images/TODManualFULLRESOLUTION.pdf modified:   _site/edburns/resume/edburns.pdf modified:   _site/scratch/tod/TODManual.pdf modified:   _site/scratch/tod/TODManualFULLRESOLUTION.pdf modified:   _site/scratch/walker37-3.pdf modified:   blog/assets/1982-05-01-swifty-43-witch-book-ad.pdf modified:   blog/assets/20200711-economist-leader-new-ideology-of-race.pdf modified:   edburns/classic-gaming/tunnels/images/TODManual.pdf modified:   edburns/classic-gaming/tunnels/images/TODManualFULLRESOLUTION.pdf modified:   edburns/content/20020518-jsf-borcon-01.pdf modified:   edburns/content/20020518-jsf-borcon-02.pdf modified:   edburns/content/20020518-jsf-borcon-03.pdf modified:   edburns/resume/edburns.pdf modified:   scratch/20220521-economist-what-russias-victory-day-celebrations-say-about-the-war-in-ukraine-2022-05-14.pdf modified:   scratch/20220712-economist-control-command-2022-07-07.pdf modified:   scratch/liberty_aro_lab_guide.pdf modified:   scratch/tod/TODManual.pdf modified:   scratch/tod/TODManualFULLRESOLUTION.pdf modified:   scratch/walker37-3.pdf
Signed-off-by: Ed Burns <edburns@microsoft.com>

--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@
 *.wav filter=lfs diff=lfs merge=lfs -text
 edburns/1990-coh-video/20200320-1990-coh-end-of-year-video.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
+*.pdf filter=lfs diff=lfs merge=lfs -text
