--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,11 @@
 edburns/1990-coh-video/20200320-1990-coh-end-of-year-video.mp4 filter=lfs diff=lfs merge=lfs -text
 *.zip filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
+edburns/Music/elvis-costello/19770725-radio/19770725-03-less-than-zeero.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/elvis-costello/19770725-radio/19770725-04-blame-it-on-cain.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/elvis-costello/19770725-radio/19770725-02-red-shoes.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/elvis-costello/19770725-radio/19770725-01-mystery-dance.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/Phish/20210814-atlantic-city/phish-01-funky-llama.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/Guitaura/20230812-youtube/Wots-uh-the-deal.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/20220423-atlantic-babel-haidt-2022-05.m4a filter=lfs diff=lfs merge=lfs -text
+edburns/Music/jugendorchester.ch/Die_Kuh_Auf_Dem_Eis/01_Dene_Wos_Guet_Geit.m4a filter=lfs diff=lfs merge=lfs -text
